Job Application for Director, Data Science at Rauxa. AI Principal Data Scientist - PS14902 - Anthem, Inc. Careers. Gousto - Jobs: Data Scientist - Apply online. B.Yond Data Scientist Developer - Intern | SmartRecruiters. Senior Data Scientist ($225k) - HealthTech | Averity. The Climate Corporation Careers - Data Scientist - Statistics. The Climate Corporation Careers - Data Scientist - Big Data. The Climate Corporation Careers - Senior Data Scientist -  Corn Modeling. Job Application for Data Science Consulting  Intern at Domo. Job Application for Data Science Consulting Intern at Domo. Data Science Lead. Splunk Data Scientist - EY Careers.       FIGHT FRAUD! As a Data Scientist - FRISS | fraud, risk & compliance     . Job Application for Lead Data Scientist, Applied Machine Learning at Tempus. CACI Ltd - Jobs: Data Scientist - Apply online. The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online. Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs. Crossover Health Careers - Data Scientist. Talkspace - Jobs: Data Scientist, User Behavior - Apply online. Job Application for Senior Data Scientist at Ask Media Group. DataProphet Junior Data Scientist | SmartRecruiters. DataProphet Senior Data Scientist | SmartRecruiters.       (Ref. 474/2019) Data Science / Project Manager - Syone     . Publicis Groupe Senior Data Scientist | SmartRecruiters.     Data Scientist at Quantium . Postman - Jobs: Data Science Intern, Analytics - Apply online.       Data Science Internship (MSc or PhD) Health care - Pacmed     . Job Application for Data Scientist at WELL Health Inc.. Data Scientist ,China - Fractal Analytics - Career Page.       Data Scientist – Natural Language Processing - DefinedCrowd     . Job Application for Data Scientist, Risk  at Brex. Job @ talpasolutions (Essen): Data Scientist | JOIN. Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN. Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN. Job @ Medlanes (Berlin): 

--- a/data-science.html
+++ b/data-science.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -104,7 +104,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
@@ -125,7 +125,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -238,7 +238,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oZ6P9fwN'>The Havas Group Careers - Data Science Director - Media</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -246,7 +246,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -282,7 +282,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 and artificial intelligence advances? In an increasingly connected world, massive
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/3171ccce-9e90-47a1-b800-11b4c75c4821'>UiPath - Senior Customer Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/uipath/3171ccce-9e90-47a1-b800-11b4c75c4821'>UiPath - Senior Customer Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -360,7 +360,7 @@ federal?...</p>
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/maven-wave-partners/job/ojKBafwy'>Maven Wave Partners Careers - Data Science Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/maven-wave-partners/job/ojKBafwy'>Maven Wave Partners Careers - Data Science Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -388,15 +388,15 @@ federal?...</p>
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gettyimages/job/oN1Aafwi'>Getty Images Careers - Data Scientist - ML/AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gettyimages/job/oN1Aafwi'>Getty Images Careers - Data Scientist - ML/AI</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gettyimages/job/oO1Aafwj'>Getty Images Careers - Data Scientist - Insights</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gettyimages/job/oO1Aafwj'>Getty Images Careers - Data Scientist - Insights</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/averoinc/62bec7fa-9b50-4ad7-9daf-41587754d087'>Avero - Data Science Modeler</a></h5> 
+<h5><a href='https://jobs.lever.co/averoinc/62bec7fa-9b50-4ad7-9daf-41587754d087'>Avero - Data Science Modeler</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... You will have the opportunity to leverage Avero's robust historical/real time 
 datasets and machine learning infrastructure to develop and tackle the complex?...</p>
@@ -405,19 +405,19 @@ datasets and machine learning infrastructure to develop and tackle the complex?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c'>Tubular Labs - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c'>Tubular Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071934-principal-data-scientist'>Bey Principal Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071934-principal-data-scientist'>Bey Principal Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upwork-tac.workable.com/j/209D2D91FF'>Upwork - Jobs: Senior Data Scientist - Apply online</a></h5> 
+<h5><a href='https://upwork-tac.workable.com/j/209D2D91FF'>Upwork - Jobs: Senior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://upwork-tac.workable.com/j/FF76B5C1B9'>Upwork - Jobs: Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upwork-tac.workable.com/j/FF76B5C1B9'>Upwork - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -447,7 +447,7 @@ Marketing?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -480,7 +480,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Cambridge Cambridge, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
