Senior DevOps Engineer - Anthem, Inc. Careers.       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.     . DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore. CARFAX Canada Careers - DevOps Engineer. Job @ Nezasa (Lisbon): DevOps Engineer | JOIN. Shore Consulting Senior DevOps Engineer | SmartRecruiters. eFront - CI/CD (DevOps) Engineer - Insight. TFS Administrator / DevOps Administrator (m/w/d). Job Application for Senior/Principal DevOps Engineer at PatientsLikeMe. Magenic Careers - Senior DevOps Engineer. Nutanix Careers - MTS - DevOps Developer. Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters. Job @ Synedat Consulting (Frankfurt): DevOps Engin... | JOIN. Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN. Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN. Cirrus Logic Careers - DevOps Engineer. Benefitfocus Careers - Sr. DevOps Engineer. spruceinfotech DevOps Software Engineer | SmartRecruiters. Contract DevOps Engineer | Shulman Fleming &amp; Partners. Alfresco - DevOps Cloud Architect. Job Application for DevOps Engineer at Arundo Analytics.     DevOps Engineer (Software Development) at Artificial Solutions . Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters. Drivy - Tooling / DevOps Intern. Job Application for DevOps Engineer at Stack Sports  . Dell International Services DevOps Engineer | SmartRecruiters. DevOps Engineer | Averity. DevOps Engineer at FinTech disruptor | Averity. Infostretch Corporation Careers - DevOps Engineer. Vocera Communications, Inc. Careers - Sr. DevOps Engineer. Job Application for DevOps Engineer at SumUp. New York Media - DevOps Engineer. Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg. Burwood Group Careers - DevOps Architect. Libertex Group - Jobs: DevOps / Incident Manager (relocation to Montenegro) - Apply online. Job Application for DevOps Engineer- Database Infrastructur

--- a/devops.html
+++ b/devops.html
@@ -137,7 +137,7 @@ leading?...</p>
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -238,7 +238,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -380,7 +380,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Canada Canada London Canada Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/leiainc/jobs/1789053'>Job Application for DevOps Engineer - LeiaLoft Digital Platform at LEIA Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/leiainc/jobs/1789053'>Job Application for DevOps Engineer - LeiaLoft Digital Platform at LEIA Inc.</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -432,7 +432,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://edc.referrals.selectminds.com/jobs/sr-devops-engineer-2235'>Sr DevOps Engineer - Entrust Datacard Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://edc.referrals.selectminds.com/jobs/sr-devops-engineer-2235'>Sr DevOps Engineer - Entrust Datacard Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
